# dappertable

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build_check.yml  ci.yml  coverage-upload.yml  dependabot.yml
.spellcheck/: wordlist.txt
dappertable/: __init__.py
tests/: requirements.txt  test_dappertable.py
