[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dappertable"
dynamic = ["version"]
description = "Print python formatted tables"
authors = [
    {name = "Tyler D. North", email = "me@tyler-north.com"},
]
dependencies = [
    "wcwidth==0.7.0",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "tox==4.53.1",
    "pylint==4.0.5",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "bandit==1.9.4",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests"]
