[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dappertable"
dynamic = ["version"]
description = "Print python formatted tables"
authors = [
    {name = "Tyler D. North", email = "me@tyler-north.com"},
]
dependencies = [
    "wcwidth==0.8.2",
]

[project.optional-dependencies]
test = [
    "pytest==9.1.1",
    "tox==4.56.2",
    "pylint==4.0.6",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "bandit==1.9.4",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests"]
